--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=MatrimonialApp
 
 #Database Connection
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://10.10.14.14:3306/UfProjection_development
-spring.datasource.username=itdevelopers
-spring.datasource.password=develop@321
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/php
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto=update
